<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <include layout="@layout/common_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/robot_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/asr_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/robot_stauts_ready" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/robot_volume"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/asr_volume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:text="@string/robot_content"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/asr_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/asr_enable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr_enable" />

                <Button
                    android:id="@+id/asr_disable"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr_disable" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_vertical_margin"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/deliver_asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr_deliver" />

                <Button
                    android:id="@+id/block_asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asr_block" />
                <Button
                    android:id="@+id/testIntent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="testIntent" />
            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <EditText
                    android:id="@+id/tts_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tts_input_tip"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_vertical_margin"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tts_status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tts_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/tts_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_vertical_margin"
                    android:text="@string/tts_speak" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin" >

                <EditText
                    android:id="@+id/nlu_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nlu_input_tip"
                    android:singleLine="true" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_vertical_margin"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nlu_status"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/nlu_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <Button
                    android:id="@+id/nlu_start"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_vertical_margin"
                    android:text="@string/nlu_understanding" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>